[deaton/trenchripper] Many updates. In the middle of adding new segmentation methods and focus filtering on kymograph.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-11_assembling_training_data/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-11_assembling_training_data/Master.ipynb
@@ -73,13 +73,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190905segmentation_yfp001',\n",
+    " '/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms/trenchripper\"\n",
+    "nd2file = \"/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms/Vibrio_A_B_VZRDM--04--RUN_80ms.nd2\""
    ]
   },
   {
@@ -123,7 +142,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
+    "    n_workers=10,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -178,7 +197,7 @@
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
     "    nd2file,\n",
     "    headpath,\n",
-    "    tpts_per_file=50,\n",
+    "    tpts_per_file=25,\n",
     "    ignore_fovmetadata=False,\n",
     "    nd2reader_override={\"z_levels\": [], \"z_coordinates\": []},\n",
     ")"
@@ -278,12 +297,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190905segmentation_yfp001',\n",
+    " '/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation/trenchripper\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "interactive_kymograph = tr.kymograph_interactive(headpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viewer = tr.hdf5_viewer(headpath)"
    ]
   },
   {
@@ -301,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interactive_kymograph.view_image_interactive()"
+    "viewer.view()"
    ]
   },
   {
@@ -321,6 +377,16 @@
     "- **t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in <br>between 5 and 10 timepoints for quick processing.\n",
     "\n",
     "Hit the \"Run Interact\" button to lock in your parameters. The button will become transparent briefly and become solid again <br>when processing is complete. After that has occured, move on to the next step. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]"
    ]
   },
   {
@@ -599,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller.daskclient"
+    "dask_controller.daskclient.restart()"
    ]
   },
   {
@@ -742,8 +808,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_handle = tr.pandas_hdf5_handler(headpath + \"/metadata.hdf5\")\n",
-    "kymograph_metadata = meta_handle.read_df(\"kymograph\")"
+    "import pandas as pd\n",
+    "\n",
+    "kymograph_metadata = pd.read_parquet(headpath + \"/kymograph/metadata\")"
    ]
   },
   {
@@ -850,6 +917,33 @@
     "##### Initialize the interactive segmentation class\n",
     "\n",
     "As a first step, initialize the `tr.fluo_segmentation_interactive` class that will be handling all steps of generating a segmentation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation/190922_20x_phase_gfp_segmentation\""
    ]
   },
   {
@@ -1016,7 +1110,7 @@
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
     "    n_workers=50,\n",
-    "    memory=\"1GB\",\n",
+    "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1154,8 +1248,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=10,\n",
-    "    memory=\"2GB\",\n",
+    "    n_workers=30,\n",
+    "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1241,7 +1335,7 @@
    "source": [
     "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"Phase\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"GFP\", \"fluorsegmentation\")"
    ]
   },
   {
@@ -1284,13 +1378,6 @@
     "    invert=Dropdown(options=[True, False], value=False),\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1870,7 +1957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
