--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-31_viewers/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-31_viewers/Master.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,8 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch2/de64/2020-03-02_plasmid_loss/\"\n",
+    "\n",
+    "nd2file = \"/n/scratch2/de64/2020-03-02_plasmid_loss/Basilisk_SJC25x2_SJC28_Losses.nd2\""
    ]
   },
   {
@@ -123,7 +124,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=10,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -375,6 +376,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import (\n",
+    "    interact,\n",
+    "    interactive,\n",
+    "    fixed,\n",
+    "    interact_manual,\n",
+    "    FloatSlider,\n",
+    "    IntSlider,\n",
+    "    Dropdown,\n",
+    "    IntText,\n",
+    "    SelectMultiple,\n",
+    "    Select,\n",
+    "    IntRangeSlider,\n",
+    "    FloatRangeSlider,\n",
+    ")\n",
+    "\n",
+    "row_detection = interactive(\n",
+    "    interactive_kymograph.preview_y_precentiles,\n",
+    "    {\"manual\": True},\n",
+    "    imported_array_list=fixed(interactive_kymograph.imported_array_list),\n",
+    "    y_percentile=IntSlider(value=99, min=0, max=100, step=1),\n",
+    "    smoothing_kernel_y_dim_0=IntSlider(value=29, min=1, max=200, step=2),\n",
+    "    y_percentile_threshold=FloatSlider(value=0.2, min=0.0, max=1.0, step=0.01),\n",
+    ")\n",
+    "display(row_detection)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -586,7 +619,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=25,\n",
     "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -1251,7 +1284,7 @@
    "source": [
     "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"GFP\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"mCherry\", \"fluorsegmentation\")"
    ]
   },
   {
