--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-02_phase_segmentation_data_prep/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-02_phase_segmentation_data_prep/Master.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data/\"\n",
+    "nd2file = \"/n/scratch2/de64/2019-05-31_validation_data/Main_Experiment.nd2\""
    ]
   },
   {
@@ -287,15 +287,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "viewer = tr.hdf5_viewer(headpath)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -310,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "viewer.view()"
+    "interactive_kymograph.view_image_interactive()"
    ]
   },
   {
@@ -586,7 +577,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=25,\n",
     "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -1025,8 +1016,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
-    "    memory=\"1GB\",\n",
+    "    n_workers=100,\n",
+    "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1251,7 +1242,7 @@
    "source": [
     "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"GFP\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"mCherry\", \"fluorsegmentation\")"
    ]
   },
   {
@@ -1785,10 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Other"
    ]
