--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-19_revisiting_training_data_assembly/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-19_revisiting_training_data_assembly/Master.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -73,13 +73,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190905segmentation_yfp001',\n",
+    " '/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms/trenchripper\"\n",
+    "nd2file = \"/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms/Vibrio_A_B_VZRDM--04--RUN_80ms.nd2\""
    ]
   },
   {
@@ -123,7 +142,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=10,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -178,7 +197,7 @@
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
     "    nd2file,\n",
     "    headpath,\n",
-    "    tpts_per_file=50,\n",
+    "    tpts_per_file=25,\n",
     "    ignore_fovmetadata=False,\n",
     "    nd2reader_override={\"z_levels\": [], \"z_coordinates\": []},\n",
     ")"
@@ -278,6 +297,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002/190917_20x_phase_gfp_segmentation002\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -330,6 +376,16 @@
     "- **t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in <br>between 5 and 10 timepoints for quick processing.\n",
     "\n",
     "Hit the \"Run Interact\" button to lock in your parameters. The button will become transparent briefly and become solid again <br>when processing is complete. After that has occured, move on to the next step. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]"
    ]
   },
   {
@@ -608,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller.daskclient"
+    "dask_controller.daskclient.restart()"
    ]
   },
   {
@@ -863,6 +919,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# headpath = \"/n/scratch3/users/d/de64/Vibrio_2_1_TOP/Vibrio_2_1_TOP\"\n",
+    "\n",
+    "headpath = \"/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation/190922_20x_phase_gfp_segmentation\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -929,6 +1014,162 @@
    "outputs": [],
    "source": [
     "interactive_segmentation.plot_processed_inter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fmt: off\n",
+    "import numpy as np\n",
+    "import skimage as sk\n",
+    "import scipy as sp\n",
+    "import h5py\n",
+    "import os\n",
+    "import copy\n",
+    "import pickle\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "import dask.dataframe as dd\n",
+    "from scipy import ndimage as ndi\n",
+    "\n",
+    "import matplotlib\n",
+    "import skimage as sk\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
+    "\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
+    "\n",
+    "from skimage import measure,feature,segmentation,future,util,morphology,filters,exposure,transform\n",
+    "from skimage.segmentation import watershed\n",
+    "from paulssonlab.deaton.trenchripper.trenchripper import kymo_handle,pandas_hdf5_handler,writedir\n",
+    "from paulssonlab.deaton.trenchripper.trenchripper import hdf5lock\n",
+    "from time import sleep\n",
+    "import scipy.ndimage.morphology as morph\n",
+    "# import mahotas as mh\n",
+    "from dask.distributed import worker_client\n",
+    "from pandas import HDFStore\n",
+    "\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "plt.imshow(interactive_segmentation.proc_list[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_background_dist(array, min_tail=30):\n",
+    "    hist_range = (0, np.percentile(array.flatten(), 95))\n",
+    "    freq, val = np.histogram(array.flatten(), bins=30, range=hist_range)\n",
+    "    mu_n = val[np.argmax(freq)]\n",
+    "    lower_tail = array[array < mu_n].flatten()\n",
+    "    if len(lower_tail) > min_tail:\n",
+    "        std_n = sp.stats.halfnorm.fit(lower_tail)[1]\n",
+    "    else:\n",
+    "        std_n = np.std(array.flatten())\n",
+    "    return mu_n, std_n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapped_kymo = tr.kymo_handle()\n",
+    "wrapped_kymo.import_unwrap(\n",
+    "    interactive_segmentation.proc_list[5], interactive_segmentation.t_tot\n",
+    ")\n",
+    "wrapped_kymo = wrapped_kymo.return_wrap()\n",
+    "\n",
+    "wrapped_cell_mask = []\n",
+    "\n",
+    "for t in range(wrapped_kymo.shape[0]):\n",
+    "    img_arr = wrapped_kymo[t]\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        cell_mask = img_arr > sk.filters.threshold_niblack(\n",
+    "            img_arr, window_size=interactive_segmentation.niblack_window_size\n",
+    "        )\n",
+    "        cell_mask = sk.morphology.remove_small_objects(\n",
+    "            cell_mask, min_size=interactive_segmentation.min_obj_size\n",
+    "        )\n",
+    "\n",
+    "        labeled_mask = sk.morphology.label(cell_mask)\n",
+    "        del cell_mask\n",
+    "\n",
+    "        background = labeled_mask == 0\n",
+    "        background_vals = img_arr[background]\n",
+    "        del background\n",
+    "\n",
+    "        #         background = img_arr[labeled_mask==0]\n",
+    "        mu_n, std_n = get_background_dist(background_vals)\n",
+    "        del background_vals\n",
+    "        #         print(mu_n,std_n)\n",
+    "\n",
+    "        rps = sk.measure.regionprops(labeled_mask, intensity_image=img_arr)\n",
+    "        obj_intensities = np.array([rp.mean_intensity for rp in rps])\n",
+    "        del rps\n",
+    "\n",
+    "        back_thr = mu_n + interactive_segmentation.background_scaling * std_n\n",
+    "\n",
+    "        #         print(back_thr)\n",
+    "        #         print(obj_intensities)\n",
+    "\n",
+    "        init_cell_mask = obj_intensities > back_thr\n",
+    "\n",
+    "        #         print(init_cell_mask)\n",
+    "\n",
+    "        cell_list = np.where(init_cell_mask)[0] + 1\n",
+    "\n",
+    "        del init_cell_mask\n",
+    "        cell_mask = np.isin(labeled_mask, cell_list)\n",
+    "        del cell_list\n",
+    "        del labeled_mask\n",
+    "\n",
+    "        cell_mask = cell_mask * (img_arr > interactive_segmentation.global_threshold)\n",
+    "        del img_arr\n",
+    "\n",
+    "        cell_mask = sk.morphology.remove_small_holes(cell_mask)\n",
+    "\n",
+    "    except:\n",
+    "        print(\"error\")\n",
+    "        cell_mask = np.zeros(img_arr.shape, dtype=bool)\n",
+    "\n",
+    "    wrapped_cell_mask.append(cell_mask)\n",
+    "    del cell_mask\n",
+    "\n",
+    "\n",
+    "del wrapped_kymo\n",
+    "wrapped_cell_mask = np.array(wrapped_cell_mask)\n",
+    "\n",
+    "cell_mask = kymo_handle()\n",
+    "cell_mask.import_wrap(wrapped_cell_mask)\n",
+    "del wrapped_cell_mask\n",
+    "cell_mask = cell_mask.return_unwrap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(cell_mask)"
    ]
   },
   {
@@ -1026,7 +1267,7 @@
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
     "    n_workers=50,\n",
-    "    memory=\"1GB\",\n",
+    "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
