[fp_aggregation] added function to extract values from saved files to plot. Tomorrow will do systematic comparisons of gr variants

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -75,14 +75,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[4]\n",
+    "file = filenames[2]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
-    "fov_index = 0\n",
-    "# phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
-    "# fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
-    "phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1100:3000, 500:2250]\n",
-    "fluor_img = nd2.get_frame_2D(v=0, c=1, z=0)[1100:3000, 500:2250]\n",
+    "fov_index = 20\n",
+    "phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "# phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1100:3000,500:2250]\n",
+    "# fluor_img = nd2.get_frame_2D(v=0, c=1, z=0)[1100:3000,500:2250]\n",
     "fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
     "ax = axes.ravel()\n",
     "ax[0].imshow(phase_img)\n",
@@ -127,18 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rdf_single_ref_point_single_cell(\n",
-    "    cell, ref_point, time_allowed=80, start_r=1, dr=1, intensity_weighted=True\n",
-    "):\n",
+    "def rdf_single_ref_point_single_cell(cell, ref_point, time_allowed=80, start_r=1, dr=1):\n",
     "    #     returns rdf for a single reference point in a single cell.\n",
     "    #     cell is a masked array, where the mask is False where the cell is, and True everywhere else.\n",
     "    #     cell.data is the fluorescence intensity array.\n",
     "    #     ref_point is a tuple of 2 arrays, corresponding to the indices of the location of the 'nucleus'\n",
     "    # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
-    "    #     if intensity_weighted:\n",
-    "    #         rho = np.sum(cell)\n",
-    "    #     else:\n",
-    "    #         rho = np.mean(cell)\n",
     "    rho = np.mean(cell)\n",
     "    r = start_r\n",
     "    r_values = []\n",
@@ -211,8 +205,13 @@
     "    #     indices, and second array is the axis 1 indices, as we would get from np.where\n",
     "    max_r_values = []\n",
     "    all_gr_values = []\n",
-    "    total_cell_intensity = np.sum(cell)\n",
-    "    pixels_in_cell = np.count_nonzero(cell.mask == 0)\n",
+    "    if intensity_weighted:\n",
+    "        total_ref_point_intensity = np.sum(\n",
+    "            cell[list(map(int, ref_points[0])), list(map(int, ref_points[1]))]\n",
+    "        )\n",
+    "        num_ref_points = len(ref_points[0])\n",
+    "    #         total_cell_intensity = np.sum(cell)\n",
+    "    #         pixels_in_cell = np.count_nonzero(cell.mask == 0)\n",
     "    for i in range(len(ref_points[0])):\n",
     "        cell_for_analysis = np.ma.copy(cell)\n",
     "        ref_point_0, ref_point_1 = ref_points[0][i], ref_points[1][i]\n",
@@ -222,7 +221,6 @@
     "            time_allowed=80,\n",
     "            start_r=start_r,\n",
     "            dr=dr,\n",
-    "            intensity_weighted=intensity_weighted,\n",
     "        )\n",
     "        if intensity_weighted:\n",
     "            gr_values *= cell.data[ref_point_0][ref_point_1]\n",
@@ -234,8 +232,9 @@
     "    )\n",
     "    mean_gr_values = [np.nanmean(i) for i in gr_values_length_corrected]\n",
     "    if intensity_weighted:\n",
+    "        #         mean_gr_values = np.multiply(pixels_in_cell,mean_gr_values/total_cell_intensity)\n",
     "        mean_gr_values = np.multiply(\n",
-    "            pixels_in_cell, mean_gr_values / total_cell_intensity\n",
+    "            num_ref_points, mean_gr_values / total_ref_point_intensity\n",
     "        )\n",
     "    return max_r_values, mean_gr_values"
    ]
@@ -247,7 +246,7 @@
    "outputs": [],
    "source": [
     "def rdf(\n",
-    "    phase_img,\n",
+    "    seg,\n",
     "    fluor_img,\n",
     "    ref_point_val=\"max\",\n",
     "    cell_indices=[0],\n",
@@ -257,8 +256,7 @@
     "    dr=1,\n",
     "    intensity_weighted=True,\n",
     "):\n",
-    "    # Segment the image.\n",
-    "    seg = segment_phase(phase_img)\n",
+    "    # Seg is the segmentation array.\n",
     "    #     Get the background fluorescence of the image, to subtract from all cell fluorescence.\n",
     "    min_fluor = np.amin(fluor_img)\n",
     "    # Get number of cells in the image.\n",
@@ -290,6 +288,12 @@
     "                ref_point = (np.array([ref_point[0][0]]), np.array([ref_point[1][0]]))\n",
     "        elif ref_point_val == \"all\":\n",
     "            ref_point = np.where(cell.mask == 0)\n",
+    "        elif ref_point_val[0] == \"sample\":\n",
+    "            points_in_cell = np.where(cell.mask == 0)\n",
+    "            ref_point = (\n",
+    "                points_in_cell[0][:: ref_point_val[1]],\n",
+    "                points_in_cell[1][:: ref_point_val[1]],\n",
+    "            )\n",
     "        else:\n",
     "            ref_point = ref_point_val\n",
     "        r_values, gr_values = rdf_multi_ref_point_single_cell(\n",
@@ -316,20 +320,103 @@
    "outputs": [],
    "source": [
     "# Test using seg as the fluor image, since this should return g(r) = 1 for all r.\n",
-    "# r_values_list, gr_values_list = rdf(phase_img,seg,cell_indices=np.arange(6),\n",
-    "#                                     ref_point_val='max',dr=1,\n",
+    "# Everything is 1 in this case\n",
+    "# r_values_list, gr_values_list = rdf(seg,seg,cell_indices=np.arange(6),\n",
+    "#                                     ref_point_val=['sample',10],dr=10,\n",
     "#                                    intensity_weighted=True)\n",
+    "# Everything is also 1 in this case\n",
     "r_values_list, gr_values_list = rdf(\n",
-    "    phase_img,\n",
-    "    fluor_img,\n",
-    "    cell_indices=np.arange(10),\n",
-    "    ref_point_val=\"all\",\n",
-    "    dr=1,\n",
-    "    savetxt=\"20200614_autocorr/20200614_P_GFPmut3_20x_meanallpoints_autocorr\",\n",
-    "    intensity_weighted=True,\n",
+    "    seg,\n",
+    "    seg,\n",
+    "    cell_indices=np.arange(6),\n",
+    "    ref_point_val=[\"sample\", 10],\n",
+    "    dr=10,\n",
+    "    intensity_weighted=False,\n",
     ")\n",
+    "\n",
+    "# r_values_list, gr_values_list = rdf(seg,fluor_img,cell_indices=np.arange(6),\n",
+    "#                                     ref_point_val=['sample',10],dr=1,\n",
+    "#                                    intensity_weighted=True,\n",
+    "#                                    savetxt='20200616_P_sfGFP_100x_meansample25_autocorr_2')\n",
+    "\n",
     "# print(r_values_list)\n",
-    "# print(gr_values_list)"
+    "print(gr_values_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing if there's some spatial effect e.g. uneven focus/illumination across the image, which would\n",
+    "# introduce more noise into the analysis.\n",
+    "filenames = [\n",
+    "    \"20200616/20200616_P_sfGFP_100x_maxonly_intweightedfalse_topleft\",\n",
+    "    \"20200616/20200616_P_sfGFP_100x_maxonly_intweightedfalse_topright\",\n",
+    "    \"20200616/20200616_P_sfGFP_100x_maxonly_intweightedfalse_bottomleft\",\n",
+    "    \"20200616/20200616_P_sfGFP_100x_maxonly_intweightedfalse_bottomright\",\n",
+    "]\n",
+    "\n",
+    "r_values_list_topleft, gr_values_list_topleft = rdf(\n",
+    "    seg[0:1500, 0:2500],\n",
+    "    fluor_img[0:1500, 0:2500],\n",
+    "    cell_indices=\"all\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    dr=1,\n",
+    "    savetxt=filenames[0],\n",
+    "    intensity_weighted=False,\n",
+    ")\n",
+    "\n",
+    "r_values_list_topright, gr_values_list_topright = rdf(\n",
+    "    seg[0:1500, 2500:],\n",
+    "    fluor_img[0:1500, 2500:],\n",
+    "    cell_indices=\"all\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    dr=1,\n",
+    "    savetxt=filenames[0],\n",
+    "    intensity_weighted=False,\n",
+    ")\n",
+    "\n",
+    "r_values_list_bottomleft, gr_values_list_bottomleft = rdf(\n",
+    "    seg[1500:, 0:2500],\n",
+    "    fluor_img[1500:, 0:2500],\n",
+    "    cell_indices=\"all\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    dr=1,\n",
+    "    savetxt=filenames[0],\n",
+    "    intensity_weighted=False,\n",
+    ")\n",
+    "\n",
+    "r_values_list_bottomright, gr_values_list_bottomright = rdf(\n",
+    "    seg[1500:, 2500:],\n",
+    "    fluor_img[1500:, 2500:],\n",
+    "    cell_indices=\"all\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    dr=1,\n",
+    "    savetxt=filenames[0],\n",
+    "    intensity_weighted=False,\n",
+    ")\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(20, 20))\n",
+    "ax = axes.ravel()\n",
+    "for i in range(len(r_values_list_topleft)):\n",
+    "    ax[0].plot(r_values_list_topleft[i], gr_values_list_topleft[i])\n",
+    "    ax[0].set_title(\"top left\")\n",
+    "\n",
+    "for i in range(len(r_values_list_topright)):\n",
+    "    ax[1].plot(r_values_list_topright[i], gr_values_list_topright[i])\n",
+    "    ax[1].set_title(\"top right\")\n",
+    "\n",
+    "for i in range(len(r_values_list_bottomleft)):\n",
+    "    ax[2].plot(r_values_list_bottomleft[i], gr_values_list_bottomleft[i])\n",
+    "    ax[2].set_title(\"bottom left\")\n",
+    "\n",
+    "for i in range(len(r_values_list_bottomright)):\n",
+    "    ax[3].plot(r_values_list_bottomright[i], gr_values_list_bottomright[i])\n",
+    "    ax[3].set_title(\"bottom right\")\n",
+    "\n",
+    "fig.savefig(\"20200616/20200616_P_sfGFP_100x_fov0_maxonly_intweightedfalse\")"
    ]
   },
   {
@@ -341,8 +428,9 @@
     "fig, ax = plt.subplots()\n",
     "for i in range(len(r_values_list)):\n",
     "    ax.plot(r_values_list[i], gr_values_list[i])\n",
+    "#     ax.legend([i for i in range(len(r_values_list))])\n",
     "ax.axhline(y=1, ls=\":\", color=\"k\")\n",
-    "fig.savefig(\"20200614_autocorr/20200614_P_GFPmut3_20x_meanallpoints_autocorr\")"
+    "fig.savefig(\"20200616/20200616_P_sfGFP_100x_maxonly_intweightedfalse\")"
    ]
   },
   {
@@ -350,7 +438,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rough_sqrt = int(np.ceil(np.sqrt(len(r_values_list))))\n",
+    "fig, axes = plt.subplots(rough_sqrt, rough_sqrt, figsize=(25, 10))\n",
+    "ax = axes.ravel()\n",
+    "i = 0\n",
+    "for cell_index in range(len(r_values_list)):\n",
+    "    cell_indices = np.where(seg == cell_index + 1)\n",
+    "    cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
+    "    #     fig, ax = plt.subplots(figsize=(5,5))\n",
+    "    ax[i].imshow(\n",
+    "        cell[\n",
+    "            int(np.min(cell_indices[0])) : int(np.max(cell_indices[0])) + 1,\n",
+    "            int(np.min(cell_indices[1])) : int(np.max(cell_indices[1])) + 1,\n",
+    "        ]\n",
+    "    )\n",
+    "    ax[i].set_title(cell_index)\n",
+    "    i += 1\n",
+    "plt.tight_layout()\n",
+    "fig.savefig(\"20200616/20200616_P_sfGFP_100x_cells\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cell_rdfs_from_txt(filename, start_r):\n",
+    "    # start_r is the start value of r in that dataset, so we can identify where each cell dataset starts.\n",
+    "    values = np.genfromtxt(filename)\n",
+    "    all_r_values = values[:, 0]\n",
+    "    all_gr_values = values[:, 1]\n",
+    "    start_indices = np.where(all_r_values == start_r)[0]\n",
+    "    r_values_list = []\n",
+    "    gr_values_list = []\n",
+    "    for i, val in enumerate(start_indices):\n",
+    "        if i != len(start_indices) - 1:\n",
+    "            r_values_list.append(all_r_values[val : start_indices[i + 1]])\n",
+    "            gr_values_list.append(all_gr_values[val : start_indices[i + 1]])\n",
+    "        else:\n",
+    "            r_values_list.append(all_r_values[val:])\n",
+    "            gr_values_list.append(all_gr_values[val:])\n",
+    "    return r_values_list, gr_values_list\n",
+    "\n",
+    "\n",
+    "get_cell_rdfs_from_txt(\n",
+    "    \"20200614_autocorr/20200614_P_GFPmut3_20x_meanallpoints_autocorr\", 1\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
