[fp_aggregation] autocorrelation function written but not tested

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -62,9 +62,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = glob.glob(\"/n/scratch2/jqs1/200228/*.nd2\") + glob.glob(\n",
-    "    \"/n/scratch2/jqs1/200305/*.nd2\"\n",
+    "# filenames = glob.glob(\"/n/scratch2/jqs1/200228/*.nd2\") + glob.glob(\n",
+    "#     \"/n/scratch2/jqs1/200305/*.nd2\")\n",
+    "\n",
+    "filenames = glob.glob(\"/n/scratch3/uers/jqs1/200228/*.nd2\") + glob.glob(\n",
+    "    \"/n/scratch3/users/jqs1/200305/*.nd2\"\n",
     ")\n",
+    "\n",
     "for i in range(len(filenames)):\n",
     "    print(i, filenames[i])"
    ]
@@ -245,57 +249,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rdf(seg, fluor_img, ref_point_val = 'max', cell_indices=[0], time_allowed=80, \n",
-    "        savetxt='rdf',start_r=1,dr=1, intensity_weighted = True):\n",
-    "# Seg is the segmentation array.\n",
-    "#     Get the background fluorescence of the image, to subtract from all cell fluorescence.\n",
+    "def rdf(\n",
+    "    seg,\n",
+    "    fluor_img,\n",
+    "    ref_point_val=\"max\",\n",
+    "    cell_indices=[0],\n",
+    "    time_allowed=80,\n",
+    "    savetxt=\"rdf\",\n",
+    "    start_r=1,\n",
+    "    dr=1,\n",
+    "    intensity_weighted=True,\n",
+    "):\n",
+    "    # Seg is the segmentation array.\n",
+    "    #     Get the background fluorescence of the image, to subtract from all cell fluorescence.\n",
     "    min_fluor = np.amin(fluor_img)\n",
     "    # Get number of cells in the image.\n",
     "    cells = np.amax(seg)\n",
-    "    if cell_indices == 'all':\n",
+    "    if cell_indices == \"all\":\n",
     "        cell_indices = np.arange(cells)\n",
-    "# all_r_values will be a list of lists of r values, while all_gr_values will be a list of lists, with\n",
-    "# the corresponding g(r) (pair correlation function) values. The overall function will return\n",
-    "# all_r_values, all_gr_values.\n",
+    "    # all_r_values will be a list of lists of r values, while all_gr_values will be a list of lists, with\n",
+    "    # the corresponding g(r) (pair correlation function) values. The overall function will return\n",
+    "    # all_r_values, all_gr_values.\n",
     "    all_r_values = []\n",
     "    all_gr_values = []\n",
     "    for cell_index in cell_indices:\n",
-    "        print('cell index',cell_index)\n",
-    "        if cell_index>cells:\n",
-    "            print('Error in rdf: cell_index larger than number of cells in fov.')\n",
+    "        print(\"cell index\", cell_index)\n",
+    "        if cell_index > cells:\n",
+    "            print(\"Error in rdf: cell_index larger than number of cells in fov.\")\n",
     "            pass\n",
-    "#         Mask the fluorescence image everywhere except for the cell.\n",
+    "        #         Mask the fluorescence image everywhere except for the cell.\n",
     "        cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
-    "        # Normalise the intensities of the cell.\n",
-    "#         mean_int_cell = np.mean(cell)\n",
+    "        # Normalise the intensities of the cell. The mean_int_cell isn't needed since everything gets normalised\n",
+    "        #         wrt total cell intensity anyway.\n",
+    "        #         mean_int_cell = np.mean(cell)\n",
     "        cell -= min_fluor\n",
-    "#         ref_point is the 'nucleus' i.e. the point relative to which the pair\n",
-    "#         correlation function is to be calculated. For now, we set it to the \n",
-    "#         maximum fluorescence intensity point of the cell.\n",
-    "        if ref_point_val == 'max':\n",
+    "        #         ref_point is the 'nucleus' i.e. the point relative to which the pair\n",
+    "        #         correlation function is to be calculated. For now, we set it to the\n",
+    "        #         maximum fluorescence intensity point of the cell.\n",
+    "        if ref_point_val == \"max\":\n",
     "            ref_point = np.where(cell == np.amax(cell))\n",
-    "#         If there is more than one maximum fluorescence point, take the first one of these.\n",
-    "            if len(ref_point[0])>1:\n",
-    "                ref_point = (np.array([ref_point[0][0]]),np.array([ref_point[1][0]]))\n",
-    "        elif ref_point_val == 'all':\n",
+    "            #         If there is more than one maximum fluorescence point, take the first one of these.\n",
+    "            if len(ref_point[0]) > 1:\n",
+    "                ref_point = (np.array([ref_point[0][0]]), np.array([ref_point[1][0]]))\n",
+    "        elif ref_point_val == \"all\":\n",
     "            ref_point = np.where(cell.mask == 0)\n",
-    "        elif ref_point_val[0] == 'sample':\n",
+    "        elif ref_point_val[0] == \"sample\":\n",
     "            points_in_cell = np.where(cell.mask == 0)\n",
-    "            ref_point = (points_in_cell[0][::ref_point_val[1]],points_in_cell[1][::ref_point_val[1]])\n",
-    "        elif ref_point_val[0] == 'max':\n",
-    "            \n",
+    "            ref_point = (\n",
+    "                points_in_cell[0][:: ref_point_val[1]],\n",
+    "                points_in_cell[1][:: ref_point_val[1]],\n",
+    "            )\n",
+    "        #         elif ref_point_val[0] == 'max': ref_point_val=['max',10] to take mean of 10 most intense pixels\n",
+    "\n",
     "        else:\n",
     "            ref_point = ref_point_val\n",
-    "        r_values, gr_values = rdf_multi_ref_point_single_cell(cell, ref_point, \n",
-    "                                                              time_allowed=80, start_r=start_r, dr=dr,\n",
-    "                                                             intensity_weighted = intensity_weighted)\n",
+    "        r_values, gr_values = rdf_multi_ref_point_single_cell(\n",
+    "            cell,\n",
+    "            ref_point,\n",
+    "            time_allowed=80,\n",
+    "            start_r=start_r,\n",
+    "            dr=dr,\n",
+    "            intensity_weighted=intensity_weighted,\n",
+    "        )\n",
     "        all_gr_values.append(gr_values)\n",
     "        all_r_values.append(r_values)\n",
     "    if savetxt:\n",
     "        all_r_to_save = np.concatenate(all_r_values).ravel()\n",
     "        all_gr_to_save = np.concatenate(all_gr_values).ravel()\n",
-    "        np.savetxt(savetxt, np.transpose(np.array([all_r_to_save,all_gr_to_save])))\n",
-    "    return all_r_values,all_gr_values"
+    "        np.savetxt(savetxt, np.transpose(np.array([all_r_to_save, all_gr_to_save])))\n",
+    "    return all_r_values, all_gr_values"
    ]
   },
   {
@@ -315,7 +337,7 @@
     "#                                    intensity_weighted=False)\n",
     "\n",
     "print(\"20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue\")\n",
-    "rdf(\n",
+    "r, gr = rdf(\n",
     "    seg,\n",
     "    fluor_img,\n",
     "    cell_indices=\"all\",\n",
@@ -383,6 +405,73 @@
     "    ax.axhline(y=1, ls=\":\", color=\"k\")\n",
     "    if savefig:\n",
     "        fig.savefig(savefig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Autocorrelation function\n",
+    "# Can do multiple cells in same image\n",
+    "# ***Haven't tested yet***\n",
+    "def autocorr(\n",
+    "    seg,\n",
+    "    fluor_img,\n",
+    "    cell_indices=[0],\n",
+    "    time_allowed=80,\n",
+    "    savetxt=\"autocorr\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    r_values=None,\n",
+    "    gr_values=None,\n",
+    "    intensity_weighted=True,\n",
+    "    start_r=1,\n",
+    "    dr=1,\n",
+    "    rdfsavetxt=\"rdf\",\n",
+    "):\n",
+    "    if not r_values or not gr_values:\n",
+    "        r_values, gr_values = rdf(\n",
+    "            seg,\n",
+    "            fluor_img,\n",
+    "            ref_point_val=ref_point_val,\n",
+    "            cell_indices=cell_indices,\n",
+    "            time_allowed=80,\n",
+    "            savetxt=rdfsavetxt,\n",
+    "            start_r=start_r,\n",
+    "            dr=dr,\n",
+    "            intensity_weighted=intensity_weighted,\n",
+    "        )\n",
+    "    if cell_indices == \"all\":\n",
+    "        cell_indices = np.arange(np.amax(seg))\n",
+    "    rho_values = []\n",
+    "    for cell_index in cell_indices:\n",
+    "        min_fluor = np.amin(fluor_img)\n",
+    "        cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
+    "        cell -= min_fluor\n",
+    "        rho = np.mean(cell)\n",
+    "        rho_values.append(rho)\n",
+    "    all_auto_corr = []\n",
+    "    al_k_values = []\n",
+    "    for i, cell_index in enumerate(cell_indices):\n",
+    "        r_vals = r_values[i]\n",
+    "        gr_vals = gr_values[i]\n",
+    "        rho = rho_values[i]\n",
+    "        k_vals = np.arange(dr, r_vals[-1], dr)\n",
+    "        all_k_values.append(k_vals)\n",
+    "        auto_corr = []\n",
+    "        for ki, k in enumerate(k_vals):\n",
+    "            num = 0\n",
+    "            denom = 0\n",
+    "            contrib_to_nom = 0\n",
+    "            for i in np.arange(dr, k_vals[-ki], dr):\n",
+    "                contrib_to_num += 1\n",
+    "                num += (gr_vals[i - 1] - rho) * (g[i + ki] - rho)\n",
+    "                denom += np.power(gr_vals[i - 1] - rho, 2)\n",
+    "            #             num = num/contrib_to_nom\n",
+    "            auto_corr.append(num / denom)\n",
+    "        all_auto_corr.append(auto_corr)\n",
+    "    return all_k_values, all_auto_corr"
    ]
   },
   {
