[cloning,shenker/cloning] Add well number to Other Notes. Ignore previous commit, this is the code that was actually used on 200627 for the LIB strain reorganization.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200627 LIB strains reorganization.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200627 LIB strains reorganization.ipynb
@@ -267,6 +267,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dd[0][\"strain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dd = workflow._import_addgene_data(\"https://www.addgene.org/1000000137/\", callback=cb)"
    ]
   },
@@ -304,7 +313,7 @@
    "outputs": [],
    "source": [
     "def cb(entry, data):\n",
-    "    print(data[\"purpose\"])\n",
+    "    print(data)\n",
     "    return entry\n",
     "\n",
     "\n",
