[fp_aggregation] debugging autocorrelation function

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -65,8 +65,8 @@
     "# filenames = glob.glob(\"/n/scratch2/jqs1/200228/*.nd2\") + glob.glob(\n",
     "#     \"/n/scratch2/jqs1/200305/*.nd2\")\n",
     "\n",
-    "filenames = glob.glob(\"/n/scratch3/uers/jqs1/200228/*.nd2\") + glob.glob(\n",
-    "    \"/n/scratch3/users/jqs1/200305/*.nd2\"\n",
+    "filenames = glob.glob(\"/n/scratch3/users/j/jqs1/200228/*.nd2\") + glob.glob(\n",
+    "    \"/n/scratch3/users/j/jqs1/200305/*.nd2\"\n",
     ")\n",
     "\n",
     "for i in range(len(filenames)):\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[2]\n",
+    "file = filenames[14]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
     "fov_index = 20\n",
@@ -336,16 +336,10 @@
     "#                                     ref_point_val=['sample',10],dr=10,\n",
     "#                                    intensity_weighted=False)\n",
     "\n",
-    "print(\"20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue\")\n",
-    "r, gr = rdf(\n",
-    "    seg,\n",
-    "    fluor_img,\n",
-    "    cell_indices=\"all\",\n",
-    "    ref_point_val=\"max\",\n",
-    "    dr=1,\n",
-    "    intensity_weighted=True,\n",
-    "    savetxt=\"20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue\",\n",
-    ")\n",
+    "# print('20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue')\n",
+    "# r,gr=rdf(seg,fluor_img,cell_indices='all',ref_point_val='max',dr=1,\n",
+    "#                                    intensity_weighted=True,\n",
+    "#                                    savetxt='20200626/sfGFP_100x_fov20/refmax_dr1_intweighttrue')\n",
     "\n",
     "# print(r_values_list)\n",
     "# print(gr_values_list)"
@@ -452,26 +446,56 @@
     "        rho = np.mean(cell)\n",
     "        rho_values.append(rho)\n",
     "    all_auto_corr = []\n",
-    "    al_k_values = []\n",
+    "    all_k_values = []\n",
     "    for i, cell_index in enumerate(cell_indices):\n",
     "        r_vals = r_values[i]\n",
     "        gr_vals = gr_values[i]\n",
     "        rho = rho_values[i]\n",
+    "        print(\"rvals\", r_vals)\n",
+    "        print(\"grvals\", gr_vals)\n",
+    "        print(\"rho\", rho)\n",
     "        k_vals = np.arange(dr, r_vals[-1], dr)\n",
+    "        print(\"kvals\", k_vals)\n",
     "        all_k_values.append(k_vals)\n",
     "        auto_corr = []\n",
     "        for ki, k in enumerate(k_vals):\n",
+    "            print(ki, k)\n",
     "            num = 0\n",
     "            denom = 0\n",
-    "            contrib_to_nom = 0\n",
-    "            for i in np.arange(dr, k_vals[-ki], dr):\n",
+    "            contrib_to_num = 0\n",
+    "            print(np.arange(dr, k_vals[-ki - 1], dr))\n",
+    "            for i in np.arange(dr, k_vals[-ki - 1], dr):\n",
     "                contrib_to_num += 1\n",
-    "                num += (gr_vals[i - 1] - rho) * (g[i + ki] - rho)\n",
+    "                num += (gr_vals[i - 1] - rho) * (gr_vals[i + ki] - rho)\n",
+    "                #                 print('num',num)\n",
     "                denom += np.power(gr_vals[i - 1] - rho, 2)\n",
+    "            #                 print('denom',denom)\n",
     "            #             num = num/contrib_to_nom\n",
     "            auto_corr.append(num / denom)\n",
     "        all_auto_corr.append(auto_corr)\n",
     "    return all_k_values, all_auto_corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_vals, autocorr = autocorr(\n",
+    "    seg,\n",
+    "    fluor_img,\n",
+    "    cell_indices=[0],\n",
+    "    time_allowed=80,\n",
+    "    savetxt=\"20200703autocorr\",\n",
+    "    ref_point_val=\"max\",\n",
+    "    r_values=None,\n",
+    "    gr_values=None,\n",
+    "    intensity_weighted=True,\n",
+    "    start_r=1,\n",
+    "    dr=1,\n",
+    "    rdfsavetxt=\"20200703autocorrtestrdf\",\n",
+    ")"
    ]
   },
   {
